# hello.esp32

./: .gitignore  .gitmodules  README.md  gitUp.sh  go.sh  monitor.sh  qemu_esp32_lcd.cfg  runQemu.sh
analyze/: .gitignore  advCalcInclusion.py  analyze.py  analyze.sh  analyze.txt  analyzeCmakeLogCFile.py  buildAssistantAI.py  cHeaderAnalyzer.py  calculateInclusions.py  calculateInclusions.sh  checkGeminiQuota.py  checkProjectIncludes.py  cmakeLogs.py  debugDir.py  depAnalyze.py  depResolver.py  m3_exec_transformed.h  requirements.txt  transform_exec_macro.py
analyze/dependeciesStudies/: checkCircularDeps.py  dependenciesAI.py  execIncludes.sh  geminiApi.py  gemini_cache.db  generalFuncs.py  includeManager.py  includeManager_allInOne.py  includeResolver.py  includesMan_allInOne_2.py  includesManager2.py  log.py  main.py  optimizeIncludesFuncs.py  prompt.txt  readCLib.py  result_includeManager.json  testGemini.py  test_includeManager.py
hello-idf/: .cproject  .gitignore  .project  CMakeLists.txt  _buildVerbose.sh  _calcCirculareDependencies.sh  analyze.md  analyzeBuildOutput.py  analyzeCoreDump.sh  app-flash_args  build.sh  buildAndAnalyze.sh  buildClean.sh  buildQemu.sh  buildTest.sh  buildVerbose.sh  config.env  config.sh  esp32_debug.cfg  espShellEnv.sh  esp_idf_project_configuration.json  flash_args.in  flash_project_args  flasher_args.json  generateCommandsList.sh  idfAnalyzeBuildObj.sh  idfGdb.sh  idfGetSize.sh  idfRun.sh  ldgen_libraries  ldgen_libraries.in  memory_analysis.txt  monitor.sh  old_CMakeLists.txt  openocd.cfg  overrideSdkconfig.py  partitions.csv  partitionsCheck.sh  project_description.json  qemuMonitor.sh  (+5 more)
hello-idf/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
hello-idf/build-cmds/: app-flash_args  config.env  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json
hello-idf/build-cmds/log/: idf_py_stdout_output_77885
hello-idf/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
hello-idf/examples/: wasm_custom.c  wasm_setup.c
hello-idf/main/: .cproject  CMakeLists.txt  _main.c  cmd.h  defines.h  device.h  esp_exception.h  he_cmd.c  he_cmd.h  he_defines.c  he_defines.h  he_device.c  he_device.h  he_esp_exception.c  he_esp_exception.h  he_io.c  he_io.h  he_memory.c  he_memory.h  he_mgt_string.c  he_mgt_string.h  he_monitor.c  he_monitor.h  he_screen.c  he_screen.h  he_sdcard.c  he_sdcard.h  he_serial.c  he_serial.h  he_settings.c  he_settings.h  he_task_broker.c  he_task_broker.h  he_wasm.c  he_wasm.h  he_wasm_native.c  he_wasm_native.h  he_wasm_native_stdclib.c  he_wasm_native_stdclib.h  idf_component.yml  (+15 more)
hello-idf/old/: tft_adv.h
hello-idf/scripts/: buildVerbose.sh  calcCirculareDependencies.sh  checkBuildDram.sh  coreDumpAnalyze.sh  coreDumpGet.sh  coreDumpSerialRead.sh  generateCommandsList.sh  idfAnalyzeStackUsage.sh  idfGdb.sh  idfGetSize.sh
hello-idf/studies/: automatic_c_pointer_wrapper.md  openOcdDebug.md  partitions.md  sdcard_allocate_file.md  sdcard_bad_sector.md  sdkconfig.md  spi_bus_already_init.md  the_pc_issue.md  wasm3.md
hello-wasm/: bindings.yaml  bindingsGenerator.py  compile.sh  fibonacci.ts  fibonacci.wasm  fibonacci_wasm.h  generate_bindings.py
hello-wasm/bindings/: bindings.c  bindings.rs  bindings.ts  esp_wasm.h  esp_wasm_bindings.c  esp_wasm_bindings.h  signatures.txt
hello-wasm/include/: wasm-idf.c
hello-wasm/old/: generateFunctionSignature.py  generate_bindings.py
hello-wasm/output/: analyze.sh  continueMalloc.64.wasm  continueMalloc.wasm  fibonacciPrint.64.wasm  fibonacciPrint.wasm  fibonacciPrint_keepAlive.wasm  fibonacciPrint_keepAlive.wat  justLoop.64.wasm  justLoop.wasm  optimize.sh  optimized.wasm  testAdd.64.wasm  testAdd.wasm  testDrawText.64.wasm  testDrawText.wasm  testSerialRead.64.wasm  testSerialRead.wasm
hello-wasm/samples/: continueMalloc.c  drawTextText.c  fibonacciPrint.c  fibonacciPrint_keepAlive.c  justLoop.c  testAdd.c  testSerialRead.c
hello-wasm/studies/: execute.md
hello-wasm/validate/: package-lock.json  package.json  tsconfig.json  validate.ts
scripts/: c_pointers_wrapper.py  generate_c_operations_enum.py  generate_h.py  generate_h_libclang.py  generate_m3op_index.py  generate_wasm_ops.py
sourcetrail/: .gitignore  helloesp.srctrlprj
studies/: emulateESP32Qemu.md  freeRtosHookMemoryAccess.md
(+21 files in other folders)
